2017-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_end): Clear
	'in_use' on 'state' structure as well as in the 'saved_states'.
	This avoids the storage being lost if 'xspara__switch_state' 
	copies 'state' into 'saved_states'.

2017-01-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c,
	* tp/Texinfo/MiscXS/misc.c: Rename file in order to avoid 
	clashing with MiscXS.c (file generated from MiscXS.xs by xsubpp)
	on case-insensitive file systems.

2017-01-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (PARAGRAPH): New 
	configuration fields 'no_final_newline' and 'add_final_space'.
	(xspara_new): Set 'in_use' on state so that it is saved properly.
	(xspara_init_state): Remove some out-of-date comments.  Retrieve
	'no_final_newline' and 'add_final_space' values.
	(xspara_end): Use 'no_final_newline' to decide whether to add
	a final newline, and pass value of 'add_final_space' to
	_add_pending_word.

	* tp/Texinfo/Convert/ParagraphNonXS.pm (end): Use 
	'no_final_newline' to decide whether to add a final newline, and 
	pass value of 'add_final_space' to _add_pending_word.

	* tp/Texinfo/Convert/Line.pm: Replace with wrapper around 
	Texinfo::Paragraph.
	* tp/Texinfo/Convert/UnFilled.pm (new): Use 'no_final_newline'
	option.

	* tp/t/paragraph.t (line count line tests): Remove, as the
	'lines_counter' information isn't available any more.

2017-01-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_next): If given
	empty argument, set 'invisible_pending_word'.

2017-01-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert) <@image>: Call
	'add_next' with an empty string argument so that any spaces 
	following the command aren't lost.

2017-01-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/ParagraphNonXS.pm,